--- a/LSTMTwitterAPI.ipynb
+++ b/LSTMTwitterAPI.ipynb
@@ -64,10 +64,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "consumer_key='ggd6CdEGcktohgYVJbgkplCeM'\n",
-    "consumer_secret='T8lXrGE6Rz0xMnDWzR7IxL4D5WL3TSjgn2SV86vNKe49xhmEDG'\n",
-    "access_token='972996143474008065-Co06QR4JIP4SZH8EYuJ8LkW6PCNPslJ'\n",
-    "access_token_secret='huwRAC8BHAxK9i28CbVQEcuGsDw3X7jwRd5eDT1Ep61C0'\n",
+    "consumer_key=''\n",
+    "consumer_secret=''\n",
+    "access_token=''\n",
+    "access_token_secret=''\n",
     "\n",
     "auth = tweepy.OAuthHandler(consumer_key, consumer_secret)\n",
     "auth.set_access_token(access_token, access_token_secret)\n",
